[project]
name = "capstone_project_2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=6.0.0",
    "docling>=2.85.0",
    "fastapi>=0.135.3",
    "google-genai>=1.72.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.44.0",
]
